# Paperstack

./: .gitignore  README.md
backend/: README.md  dbFunctions.py  main.py  models.py  pstack.db  pyproject.toml  requirements.txt
backend/python/paperstack_backend/: cli.py  db.py  main.py  models.py  settings.py
backend/scripts/: create_test_db.sh
backend/src/Paperstack_backend/: models.py
backend/src/app_basics/: __init__.py
backend/src/app_basics/cli/: config.py  db.py  store.py  test.py
backend/src/app_basics/model/: __init__.py  settings.py
backend/src/app_basics/utils/: __init__.py  config.py  utils.py
backend/src/appbasics/: __init__.py
backend/src/appbasics/cli/: config.py  db.py  generate.py  model.py  store.py  toolset.py
backend/src/appbasics/model/: __init__.py  crud.py  query.py  settings.py  store.py
backend/src/appbasics/utils/: __init__.py  config.py  dbAccess.py
backend/src/paperstack_backend/api/: __init__.py  document.py  main.py
backend/src/paperstack_backend/cli/: paperstack_cli.py  test.py
backend/src/paperstack_backend/config/: __init__.py  pstack.cfg  setting.py
backend/src/paperstack_backend/db/: __init__.py  dbInterface.py  docCollection.py  docType.py  document.py
backend/src/paperstack_backend/model/: __init__.py  docCollection.py  document.py  settings.py
backend/src/paperstack_server/: __init__.py
backend/src/paperstack_server/api/: __init__.py  base.py  docType.py  doctype.py  document.py  main.py  query.py
backend/src/paperstack_server/app/: __init__.py  app.py  stores.py
backend/src/paperstack_server/cli/: cli.py  crud_doctype.py  crud_document.py  crud_query.py  db.py  document.py  main.py  paperstack_cli.py  paperstack_server.py  server.py  test.py
backend/src/paperstack_server/config/: __init__.py  paperstack.cfg  (+2 more)
backend/src/scripts/: start_pstack_server.sh
(+47 files in other folders)
