[project]
name = "Paperstack-backend"
version = "0.0.1"
authors = [
    { name="Takanori Kono", email="takanori.kono@gmail.com" },
]
description = "Backend of the Paperstack application"
readme="README.md"
required_python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3", 
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = [
    "LICENSE"
]
dependencies = [
  "typer",
  "fastapi",
  "sqlmodel",
]

[project.urls]
Homepage = "https://github.com/tkono17/Paperstack"

[project.scripts]
paperstack-cli = "paperstack_backend.cli.paperstack_cli:app"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/paperstack_backend" ]
