[project]
name = "Paperstack-server"
version = "0.0.1"
authors = [
    { name="Takanori Kono", email="takanori.kono@gmail.com" },
]
description = "Paperstack server application"
readme="README.md"
required_python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3", 
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = [
    "LICENSE"
]
dependencies = [
  "typer",
  "fastapi",
  "sqlmodel",
  "uvicorn[standard]"
]

[project.urls]
Homepage = "https://github.com/tkono17/Paperstack"

[project.scripts]
appbasics-test = "appbasics.cli.test:main"
appbasics-gen = "appbasics.cli.generate:main"
appbasics-toolset = "appbasics.cli.toolset:main"
paperstack-cli = "paperstack_server.cli.main:main"
paperstack-server = "paperstack_server.cli.server:main"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/paperstack_server", "src/appbasics" ]
